leptos-fluent-macros/tests/ui/leptos_fluent/fail/invalid_parameter.stderr
error: Not a valid parameter 'invalid_parameter' for leptos_fluent! macro.
  --> tests/ui/leptos_fluent/fail/invalid_parameter.rs:17:9
   |
17 |         invalid_parameter: "foo",
   |         ^^^^^^^^^^^^^^^^^
